# activity_detection

./: .env.example  .gitignore  .~sample_requests.xlsx  classes.json  controller.py  main.py  model_setup.py  nvidia_activity_detection_test.py  nvidia_model.py  pyproject.toml  sample_requests.xlsx  setup.py  temp.txt  test.py  train.py
pipeline/: __init__.py  capture.py  config.py  detect.py  label.py  models.py
