[project]
name = "x3d-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=16.0.1",
    "fastapi>=0.128.0",
    "opencv-python-headless>=4.13.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.21",
    "pytorchvideo>=0.1.5",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.4.0",
    "uvicorn[standard]>=0.40.0",
    "websocket>=0.2.1",
    "wsproto>=1.3.2",
]
